# aws_c

./: .gitignore  README  configure.ac
src/: Makefile.am  aws.c  aws_creds.c  aws_creds.h  aws_sig.c
